fixed overflow in the body and favicon

--- a/public/style.css
+++ b/public/style.css
@@ -169,7 +169,7 @@ footer {
 
 .column-title,
 .column {
-    width: 20%;
+    width: 15%;
     color: grey;
     text-align: center;
 }
@@ -543,6 +543,10 @@ p {
 .description {
     height: 200px;
     width: 55%;
+}
+
+.description p {
+    width: 100%;
 }
 
 .item-name {
